updated to dedicated redis instance for audio

--- a/nbs/00_redis.ipynb
+++ b/nbs/00_redis.ipynb
@@ -50,13 +50,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
     "\n",
-    "async def get_redis():\n",
+    "async def get_inner_redis():\n",
+    "    \n",
+    "    db = await aioredis.from_url(\n",
+    "            \"redis://redis:6379/0\",decode_responses=True\n",
+    "        )\n",
+    "\n",
+    "    await db.ping()\n",
+    "\n",
+    "    return db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "\n",
+    "async def get_stream_redis():\n",
     "    \n",
     "    db = await aioredis.from_url(\n",
     "            \"redis://host.docker.internal:6380/0\",decode_responses=True\n",
@@ -69,7 +88,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from host\n",
+    "\n",
+    "async def get_stream_redis():\n",
+    "    \n",
+    "    db = await aioredis.from_url(\n",
+    "            \"redis://localhost:6380/0\",decode_responses=True\n",
+    "        )\n",
+    "\n",
+    "    await db.ping()\n",
+    "\n",
+    "    return db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "async def get_connection_queues(name, redis_client, min_length=1, pattern='*'):\n",
+    "    \"\"\"\n",
+    "    Finds queues that match a given pattern and have a minimum number of items,\n",
+    "    and returns a DataFrame with queue names and their lengths.\n",
+    "    \"\"\"\n",
+    "    matching_queues = []\n",
+    "    queue_lengths = []\n",
+    "    cursor = '0'\n",
+    "    while cursor != 0:\n",
+    "        cursor, keys = await redis_client.scan(cursor, match=f'{name}:{pattern}', count=min_length)\n",
+    "        for key in keys:\n",
+    "            if await redis_client.type(key) == 'list' and await redis_client.llen(key) >= min_length:\n",
+    "                matching_queues.append(key)\n",
+    "                length = await redis_client.llen(key)\n",
+    "                queue_lengths.append(length)\n",
+    "\n",
+    "    data = {\n",
+    "        'queue': matching_queues,\n",
+    "        'length': queue_lengths\n",
+    "    }\n",
+    "    return pd.DataFrame(data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>queue</th>\n",
+       "      <th>length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>initialFeed_audio:2a09a4aa-586c-4fd1-9ffa-ed66...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>initialFeed_audio:a7d2a5ec-21b7-4dc5-a95b-bfae...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>initialFeed_audio:29ac4203-b421-406c-b250-650a...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>initialFeed_audio:719ebded-1cc9-42b0-a2b7-d1fd...</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               queue  length\n",
+       "0  initialFeed_audio:2a09a4aa-586c-4fd1-9ffa-ed66...       1\n",
+       "1  initialFeed_audio:a7d2a5ec-21b7-4dc5-a95b-bfae...       1\n",
+       "2  initialFeed_audio:29ac4203-b421-406c-b250-650a...       1\n",
+       "3  initialFeed_audio:719ebded-1cc9-42b0-a2b7-d1fd...       6"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "await get_connection_queues('initialFeed_audio',redis_client)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +235,7 @@
        "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
