--- a/nbs/03_audio_processor_from_file.ipynb
+++ b/nbs/03_audio_processor_from_file.ipynb
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_405/1284937600.py:13: DeprecationWarning: \n",
+      "/tmp/ipykernel_708/1284937600.py:13: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -58,18 +58,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export \n",
-    "redis_client = await get_redis()\n",
+    "redis_inner_client = await get_inner_redis()\n",
+    "redis_stream_client = await get_stream_redis()\n",
     "client_id = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +82,7 @@
     "    redis_client: aioredis.Redis\n",
     "\n",
     "    async def initialize(self):\n",
-    "        self.redis_client = await get_redis()\n",
+    "     #   self.redis_client = await get_inner_redis()\n",
     "        async with self.redis_client.pubsub() as sub:\n",
     "            await sub.subscribe(self.channel_name)\n",
     "\n",
@@ -98,30 +99,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export \n",
-    "diarize_ready_notification = Notification('DiarizeReady',redis_client)\n",
+    "diarize_ready_notification = Notification('DiarizeReady',redis_inner_client)\n",
     "await diarize_ready_notification.initialize()\n",
-    "transcribe_ready_notification = Notification('TranscribeReady',redis_client)\n",
+    "transcribe_ready_notification = Notification('TranscribeReady',redis_inner_client)\n",
     "await transcribe_ready_notification.initialize()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export \n",
     "async def diarize(audio_data, client_id, audio_name, shift):\n",
-    "    audio = Audio(chunk_name=audio_name, redis_client=redis_client, data=audio_data)\n",
+    "    audio = Audio(chunk_name=audio_name, redis_client=redis_inner_client, data=audio_data)\n",
     "    await audio.save()\n",
-    "    await redis_client.lpush('Audio2DiarizeQueue', f'{audio_name}:{client_id}')\n",
+    "    await redis_inner_client.lpush('Audio2DiarizeQueue', f'{audio_name}:{client_id}')\n",
     "    await diarize_ready_notification.wait(audio_name)\n",
-    "    diarization = Diarisation(audio_name, redis_client)\n",
+    "    diarization = Diarisation(audio_name, redis_inner_client)\n",
     "    await diarization.get()\n",
     "    df = pd.DataFrame(diarization.data)\n",
     "    df['silence'] = df['start']-df['end'].shift()\n",
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,19 +150,19 @@
     "        segment['connection_id'] = connection_id\n",
     "        segment['name'] = str(uuid.uuid4())\n",
     "        segment['audio_id'] = audio_name\n",
-    "        await redis_client.lpush('TranscribeQueue', json.dumps(segment))\n",
+    "        await redis_inner_client.lpush('TranscribeQueue', json.dumps(segment))\n",
     "        await transcribe_ready_notification.wait(segment['name'])\n",
     "       # wait_notification(transcribe_ready_notification,segment['name'])\n",
-    "        transcription = Transcript(segment[\"name\"],redis_client)\n",
+    "        transcription = Transcript(segment[\"name\"],redis_inner_client)\n",
     "        await transcription.get()\n",
     "        segment['transcription'] = transcription.data\n",
-    "        await redis_client.lpush(f'Segment:{connection_id}', json.dumps(segment))\n",
-    "        await redis_client.publish(f'SegmentReady', segment[\"name\"])"
+    "        await redis_inner_client.lpush(f'Segment:{connection_id}', json.dumps(segment))\n",
+    "        await redis_inner_client.publish(f'SegmentReady', segment[\"name\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -240,14 +241,14 @@
    "source": [
     "audio_data = await audio_slicer.export_data(start,end)\n",
     "audio_name = str(uuid.uuid4())\n",
-    "audio = Audio(chunk_name=audio_name, redis_client=redis_client, data=audio_data)\n",
+    "audio = Audio(chunk_name=audio_name, redis_client=redis_inner_client, data=audio_data)\n",
     "await audio.save()\n",
     "diarization_result = await diarize(audio_data,client_id,audio_name,start)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -269,6 +270,158 @@
     "start_ = await get_next_chunk_start(diarization_result,length)\n",
     "start = start_ if start_ else start+length\n",
     "end+=length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'speaker': '2',\n",
+       "  'start': 0.46689303904923596,\n",
+       "  'end': 13.285229202037351,\n",
+       "  'conv_start': 0.46689303904923596,\n",
+       "  'conv_end': 13.285229202037351,\n",
+       "  'connection_id': 'david_audio.webm',\n",
+       "  'name': '0a34d623-f80f-4de1-8521-ac33ae9dc74f',\n",
+       "  'audio_id': '34c974f6-2d1c-4327-9420-27f5b956fb9f',\n",
+       "  'transcription': [{'start': 0.0,\n",
+       "    'end': 4.32,\n",
+       "    'text': ' but this life cycle is indicative only, right? So in other words,'},\n",
+       "   {'start': 4.32,\n",
+       "    'end': 7.68,\n",
+       "    'text': \" you could take any life cycle and do what I'm going to do here.\"},\n",
+       "   {'start': 8.18,\n",
+       "    'end': 12.82,\n",
+       "    'text': ' So initiation, we typically have discovery,'}]},\n",
+       " {'speaker': '2',\n",
+       "  'start': 16.782682512733444,\n",
+       "  'end': 17.597623089983024,\n",
+       "  'conv_start': 16.782682512733444,\n",
+       "  'conv_end': 17.597623089983024,\n",
+       "  'connection_id': 'david_audio.webm',\n",
+       "  'name': 'bbbac75c-1dbf-4825-8159-d0df7f91f60e',\n",
+       "  'audio_id': '34c974f6-2d1c-4327-9420-27f5b956fb9f',\n",
+       "  'transcription': [{'start': 0.0,\n",
+       "    'end': 0.8200000000000001,\n",
+       "    'text': ' design,'}]},\n",
+       " {'speaker': '2',\n",
+       "  'start': 19.974533106960955,\n",
+       "  'end': 25.950764006791175,\n",
+       "  'conv_start': 19.974533106960955,\n",
+       "  'conv_end': 25.950764006791175,\n",
+       "  'connection_id': 'david_audio.webm',\n",
+       "  'name': '8685e533-0269-4985-b9a7-eba0aa4a72c9',\n",
+       "  'audio_id': '34c974f6-2d1c-4327-9420-27f5b956fb9f',\n",
+       "  'transcription': [{'start': 0.0,\n",
+       "    'end': 5.98,\n",
+       "    'text': ' Build. Test. Implement.'}]},\n",
+       " {'speaker': '2',\n",
+       "  'start': 29.193548387096776,\n",
+       "  'end': 40.02546689303905,\n",
+       "  'conv_start': 29.193548387096776,\n",
+       "  'conv_end': 40.02546689303905,\n",
+       "  'connection_id': 'david_audio.webm',\n",
+       "  'name': '0c9fd45a-d6a7-4c16-8947-098527555f01',\n",
+       "  'audio_id': '34c974f6-2d1c-4327-9420-27f5b956fb9f',\n",
+       "  'transcription': [{'start': 0.0,\n",
+       "    'end': 4.12,\n",
+       "    'text': \" Uh, call it benefits relaxation, but it's a bit of a in fact,\"},\n",
+       "   {'start': 4.12,\n",
+       "    'end': 7.2,\n",
+       "    'text': \" we'll have to put that in there because it kind of happens and close.\"},\n",
+       "   {'start': 8.8,\n",
+       "    'end': 10.84,\n",
+       "    'text': \" Now that's a fairly sort of waterfall time now.\"}]},\n",
+       " {'speaker': '2',\n",
+       "  'start': 42.92869269949066,\n",
+       "  'end': 51.09507640067912,\n",
+       "  'conv_start': 42.92869269949066,\n",
+       "  'conv_end': 51.09507640067912,\n",
+       "  'connection_id': 'david_audio.webm',\n",
+       "  'name': '616f2f1d-08a9-4011-b466-edd9a578a0bb',\n",
+       "  'audio_id': '34c974f6-2d1c-4327-9420-27f5b956fb9f',\n",
+       "  'transcription': [{'start': 0.0,\n",
+       "    'end': 8.16,\n",
+       "    'text': \" If you have agile projects, what we tend to do is we'll iterate around this cycle here.\"}]},\n",
+       " {'speaker': '1',\n",
+       "  'start': 53.573853989813244,\n",
+       "  'end': 59.99151103565365,\n",
+       "  'conv_start': 53.573853989813244,\n",
+       "  'conv_end': 59.99151103565365,\n",
+       "  'connection_id': 'david_audio.webm',\n",
+       "  'name': '4d327334-f5ff-45c4-91c3-c98794f374d2',\n",
+       "  'audio_id': '34c974f6-2d1c-4327-9420-27f5b956fb9f',\n",
+       "  'transcription': [{'start': 0.0,\n",
+       "    'end': 6.42,\n",
+       "    'text': \" So if it's an agile piece of work, we'll\"}]}]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diarization_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "connection_id = 'david_audio.webm'#'david_audio.webm'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "segments = await redis_client.lrange(f'Segment:{connection_id}', 0, -1)\n",
+    "segments = [json.loads(s) for s in reversed(segments)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'speaker': '2',\n",
+       " 'start': 0.46689303904923596,\n",
+       " 'end': 13.285229202037351,\n",
+       " 'conv_start': 0.46689303904923596,\n",
+       " 'conv_end': 13.285229202037351,\n",
+       " 'connection_id': 'david_audio.webm',\n",
+       " 'name': '1b53ea64-adf3-4ded-a86c-8d6036b57f4d',\n",
+       " 'audio_id': '11aba6ec-da32-4098-80dd-e02d5a9d54a4',\n",
+       " 'transcription': [{'start': 0.0,\n",
+       "   'end': 4.32,\n",
+       "   'text': ' but this life cycle is indicative only, right? So in other words,'},\n",
+       "  {'start': 4.32,\n",
+       "   'end': 7.68,\n",
+       "   'text': \" you could take any life cycle and do what I'm going to do here.\"},\n",
+       "  {'start': 8.18,\n",
+       "   'end': 12.82,\n",
+       "   'text': ' So initiation, we typically have discovery,'}]}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "segments[1]"
    ]
   },
   {
