--- a/nbs/00.psql.ipynb
+++ b/nbs/00.psql.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,14 +58,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_368/2249259410.py:13: MovedIn20Warning: The ``declarative_base()`` function is now available as sqlalchemy.orm.declarative_base(). (deprecated since: 2.0) (Background on SQLAlchemy 2.0 at: https://sqlalche.me/e/b8d9)\n",
+      "/tmp/ipykernel_11854/2249259410.py:13: MovedIn20Warning: The ``declarative_base()`` function is now available as sqlalchemy.orm.declarative_base(). (deprecated since: 2.0) (Background on SQLAlchemy 2.0 at: https://sqlalche.me/e/b8d9)\n",
       "  Base = declarative_base()\n"
      ]
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,14 +97,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_368/3982815251.py:3: MovedIn20Warning: The ``declarative_base()`` function is now available as sqlalchemy.orm.declarative_base(). (deprecated since: 2.0) (Background on SQLAlchemy 2.0 at: https://sqlalche.me/e/b8d9)\n",
+      "/tmp/ipykernel_11854/3982815251.py:3: MovedIn20Warning: The ``declarative_base()`` function is now available as sqlalchemy.orm.declarative_base(). (deprecated since: 2.0) (Background on SQLAlchemy 2.0 at: https://sqlalche.me/e/b8d9)\n",
       "  LocalBase = declarative_base(metadata=MetaData(schema=schema))\n"
      ]
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,30 +140,31 @@
     "\n",
     "class SpeakerEmbs(LocalBase):\n",
     "    __tablename__ = 'speakerembs'\n",
-    "    id = Column(BIGINT, primary_key=True, autoincrement=True)\n",
+    "    id = mapped_column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4)\n",
     "    embedding = mapped_column(Vector(256))\n",
-    "    speaker_id = mapped_column(BIGINT, ForeignKey('speakers.id'), nullable=False)\n",
-    "    client_id = Column(BIGINT, nullable=False)\n",
+    "    speaker_id = mapped_column(UUID(as_uuid=True), ForeignKey('speakers.id'), nullable=False)\n",
+    "    client_id = Column(UUID(as_uuid=True), nullable=False)\n",
+    "\n",
     "\n",
     "\n",
     "class Speakers(LocalBase):\n",
     "    __tablename__ = 'speakers'\n",
-    "    id = Column(BIGINT, primary_key=True, autoincrement=True)\n",
-    "    client_id = Column(BIGINT, nullable=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#engine_execute(f'drop table main.usertokens;')"
+    "    id = mapped_column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4)\n",
+    "    client_id = Column(UUID(as_uuid=True), nullable=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#engine_execute(f'drop table speakers.speakers;')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,14 +174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_368/4080736814.py:1: DeprecationWarning: \n",
+      "/tmp/ipykernel_11854/4080736814.py:1: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -197,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -228,53 +229,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>[-0.0060930643,0.24502955,-0.017237157,-0.0625...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>[-0.22509952,0.033845965,0.25711492,0.09201576...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>[-0.0060930643,0.24502955,-0.017237157,-0.0625...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>[-0.22509952,0.033845965,0.25711492,0.09201576...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id                                          embedding  speaker_id  \\\n",
-       "0   1  [-0.0060930643,0.24502955,-0.017237157,-0.0625...           1   \n",
-       "1   2  [-0.22509952,0.033845965,0.25711492,0.09201576...           2   \n",
-       "2   3  [-0.0060930643,0.24502955,-0.017237157,-0.0625...           3   \n",
-       "3   4  [-0.22509952,0.033845965,0.25711492,0.09201576...           4   \n",
-       "\n",
-       "   client_id  \n",
-       "0          0  \n",
-       "1          0  \n",
-       "2          1  \n",
-       "3          1  "
+       "Empty DataFrame\n",
+       "Columns: [id, embedding, speaker_id, client_id]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -314,39 +279,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id  client_id\n",
-       "0   1          0\n",
-       "1   2          0\n",
-       "2   3          1\n",
-       "3   4          1"
+       "Empty DataFrame\n",
+       "Columns: [id, client_id]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
