--- a/nbs/00_redis.ipynb
+++ b/nbs/00_redis.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,9 +114,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_66261/648225756.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -145,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -174,45 +189,24 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>initialFeed_audio:2a09a4aa-586c-4fd1-9ffa-ed66...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>initialFeed_audio:a7d2a5ec-21b7-4dc5-a95b-bfae...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>initialFeed_audio:29ac4203-b421-406c-b250-650a...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>initialFeed_audio:719ebded-1cc9-42b0-a2b7-d1fd...</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                               queue  length\n",
-       "0  initialFeed_audio:2a09a4aa-586c-4fd1-9ffa-ed66...       1\n",
-       "1  initialFeed_audio:a7d2a5ec-21b7-4dc5-a95b-bfae...       1\n",
-       "2  initialFeed_audio:29ac4203-b421-406c-b250-650a...       1\n",
-       "3  initialFeed_audio:719ebded-1cc9-42b0-a2b7-d1fd...       6"
+       "Empty DataFrame\n",
+       "Columns: [queue, length]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "await get_connection_queues('initialFeed_audio',redis_client)"
+    "redis_inner_client = await get_inner_redis()\n",
+    "await get_connection_queues('Audio2DiarizeQueue',redis_inner_client)"
    ]
   },
   {
@@ -421,9 +415,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "langchain",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "langchain"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -435,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
