--- a/nbs/03_audio_processor_from_file.ipynb
+++ b/nbs/03_audio_processor_from_file.ipynb
@@ -6,12 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp  diarize_transcribe\n",
+    "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
     "import sys\n",
-    "sys.path.insert(0,'/app')"
+    "sys.path.insert(0,'/app')\n",
+    "sys.path.insert(0,'..')"
    ]
   },
   {
@@ -23,7 +24,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_708/1284937600.py:13: DeprecationWarning: \n",
+      "/tmp/ipykernel_389/4230643358.py:12: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -35,7 +36,7 @@
     }
    ],
    "source": [
-    "#| export \n",
+    "\n",
     "from audio.redis import *\n",
     "from audio.audio import *\n",
     "# from audio.paths import *\n",
@@ -62,10 +63,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export \n",
-    "redis_inner_client = await get_inner_redis()\n",
-    "redis_stream_client = await get_stream_redis()\n",
-    "client_id = 0"
+    "# import uuid\n",
+    "# client_id = str(uuid.uuid4());client_id"
    ]
   },
   {
@@ -74,7 +73,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export \n",
+    "\n",
+    "redis_inner_client = await get_inner_redis()\n",
+    "redis_stream_client = await get_stream_redis()\n",
+    "client_id = '851f343e-4954-4f0a-8835-9664cc91c181'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "\n",
     "@dataclass\n",
     "class Notification:\n",
@@ -99,11 +110,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export \n",
+    "\n",
     "diarize_ready_notification = Notification('DiarizeReady',redis_inner_client)\n",
     "await diarize_ready_notification.initialize()\n",
     "transcribe_ready_notification = Notification('TranscribeReady',redis_inner_client)\n",
@@ -112,11 +123,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export \n",
+    "\n",
     "async def diarize(audio_data, client_id, audio_name, shift):\n",
     "    audio = Audio(chunk_name=audio_name, redis_client=redis_inner_client, data=audio_data)\n",
     "    await audio.save()\n",
@@ -140,11 +151,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export \n",
+    "\n",
     "async def transcribe(diarization_result,connection_id,audio_name):\n",
     "    for segment in diarization_result:\n",
     "        segment['connection_id'] = connection_id\n",
@@ -162,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,151 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done\n"
-     ]
-    }
-   ],
-   "source": [
-    "audio_data = await audio_slicer.export_data(start,end)\n",
-    "audio_name = str(uuid.uuid4())\n",
-    "audio = Audio(chunk_name=audio_name, redis_client=redis_inner_client, data=audio_data)\n",
-    "await audio.save()\n",
-    "diarization_result = await diarize(audio_data,client_id,audio_name,start)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done\n",
-      "done\n",
-      "done\n",
-      "done\n",
-      "done\n",
-      "done\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "await transcribe(diarization_result,connection_id,audio_name)\n",
-    "start_ = await get_next_chunk_start(diarization_result,length)\n",
-    "start = start_ if start_ else start+length\n",
-    "end+=length"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'speaker': '2',\n",
-       "  'start': 0.46689303904923596,\n",
-       "  'end': 13.285229202037351,\n",
-       "  'conv_start': 0.46689303904923596,\n",
-       "  'conv_end': 13.285229202037351,\n",
-       "  'connection_id': 'david_audio.webm',\n",
-       "  'name': '0a34d623-f80f-4de1-8521-ac33ae9dc74f',\n",
-       "  'audio_id': '34c974f6-2d1c-4327-9420-27f5b956fb9f',\n",
-       "  'transcription': [{'start': 0.0,\n",
-       "    'end': 4.32,\n",
-       "    'text': ' but this life cycle is indicative only, right? So in other words,'},\n",
-       "   {'start': 4.32,\n",
-       "    'end': 7.68,\n",
-       "    'text': \" you could take any life cycle and do what I'm going to do here.\"},\n",
-       "   {'start': 8.18,\n",
-       "    'end': 12.82,\n",
-       "    'text': ' So initiation, we typically have discovery,'}]},\n",
-       " {'speaker': '2',\n",
-       "  'start': 16.782682512733444,\n",
-       "  'end': 17.597623089983024,\n",
-       "  'conv_start': 16.782682512733444,\n",
-       "  'conv_end': 17.597623089983024,\n",
-       "  'connection_id': 'david_audio.webm',\n",
-       "  'name': 'bbbac75c-1dbf-4825-8159-d0df7f91f60e',\n",
-       "  'audio_id': '34c974f6-2d1c-4327-9420-27f5b956fb9f',\n",
-       "  'transcription': [{'start': 0.0,\n",
-       "    'end': 0.8200000000000001,\n",
-       "    'text': ' design,'}]},\n",
-       " {'speaker': '2',\n",
-       "  'start': 19.974533106960955,\n",
-       "  'end': 25.950764006791175,\n",
-       "  'conv_start': 19.974533106960955,\n",
-       "  'conv_end': 25.950764006791175,\n",
-       "  'connection_id': 'david_audio.webm',\n",
-       "  'name': '8685e533-0269-4985-b9a7-eba0aa4a72c9',\n",
-       "  'audio_id': '34c974f6-2d1c-4327-9420-27f5b956fb9f',\n",
-       "  'transcription': [{'start': 0.0,\n",
-       "    'end': 5.98,\n",
-       "    'text': ' Build. Test. Implement.'}]},\n",
-       " {'speaker': '2',\n",
-       "  'start': 29.193548387096776,\n",
-       "  'end': 40.02546689303905,\n",
-       "  'conv_start': 29.193548387096776,\n",
-       "  'conv_end': 40.02546689303905,\n",
-       "  'connection_id': 'david_audio.webm',\n",
-       "  'name': '0c9fd45a-d6a7-4c16-8947-098527555f01',\n",
-       "  'audio_id': '34c974f6-2d1c-4327-9420-27f5b956fb9f',\n",
-       "  'transcription': [{'start': 0.0,\n",
-       "    'end': 4.12,\n",
-       "    'text': \" Uh, call it benefits relaxation, but it's a bit of a in fact,\"},\n",
-       "   {'start': 4.12,\n",
-       "    'end': 7.2,\n",
-       "    'text': \" we'll have to put that in there because it kind of happens and close.\"},\n",
-       "   {'start': 8.8,\n",
-       "    'end': 10.84,\n",
-       "    'text': \" Now that's a fairly sort of waterfall time now.\"}]},\n",
-       " {'speaker': '2',\n",
-       "  'start': 42.92869269949066,\n",
-       "  'end': 51.09507640067912,\n",
-       "  'conv_start': 42.92869269949066,\n",
-       "  'conv_end': 51.09507640067912,\n",
-       "  'connection_id': 'david_audio.webm',\n",
-       "  'name': '616f2f1d-08a9-4011-b466-edd9a578a0bb',\n",
-       "  'audio_id': '34c974f6-2d1c-4327-9420-27f5b956fb9f',\n",
-       "  'transcription': [{'start': 0.0,\n",
-       "    'end': 8.16,\n",
-       "    'text': \" If you have agile projects, what we tend to do is we'll iterate around this cycle here.\"}]},\n",
-       " {'speaker': '1',\n",
-       "  'start': 53.573853989813244,\n",
-       "  'end': 59.99151103565365,\n",
-       "  'conv_start': 53.573853989813244,\n",
-       "  'conv_end': 59.99151103565365,\n",
-       "  'connection_id': 'david_audio.webm',\n",
-       "  'name': '4d327334-f5ff-45c4-91c3-c98794f374d2',\n",
-       "  'audio_id': '34c974f6-2d1c-4327-9420-27f5b956fb9f',\n",
-       "  'transcription': [{'start': 0.0,\n",
-       "    'end': 6.42,\n",
-       "    'text': \" So if it's an agile piece of work, we'll\"}]}]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "diarization_result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,66 +247,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "segments = await redis_client.lrange(f'Segment:{connection_id}', 0, -1)\n",
-    "segments = [json.loads(s) for s in reversed(segments)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'speaker': '2',\n",
-       " 'start': 0.46689303904923596,\n",
-       " 'end': 13.285229202037351,\n",
-       " 'conv_start': 0.46689303904923596,\n",
-       " 'conv_end': 13.285229202037351,\n",
-       " 'connection_id': 'david_audio.webm',\n",
-       " 'name': '1b53ea64-adf3-4ded-a86c-8d6036b57f4d',\n",
-       " 'audio_id': '11aba6ec-da32-4098-80dd-e02d5a9d54a4',\n",
-       " 'transcription': [{'start': 0.0,\n",
-       "   'end': 4.32,\n",
-       "   'text': ' but this life cycle is indicative only, right? So in other words,'},\n",
-       "  {'start': 4.32,\n",
-       "   'end': 7.68,\n",
-       "   'text': \" you could take any life cycle and do what I'm going to do here.\"},\n",
-       "  {'start': 8.18,\n",
-       "   'end': 12.82,\n",
-       "   'text': ' So initiation, we typically have discovery,'}]}"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "segments[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "CancelledError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mCancelledError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m----> 2\u001b[0m     audio_data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m audio_slicer\u001b[38;5;241m.\u001b[39mexport_data(start,end)\n\u001b[1;32m      3\u001b[0m     audio_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mstr\u001b[39m(uuid\u001b[38;5;241m.\u001b[39muuid4())\n\u001b[1;32m      4\u001b[0m     audio \u001b[38;5;241m=\u001b[39m Audio(chunk_name\u001b[38;5;241m=\u001b[39maudio_name, redis_client\u001b[38;5;241m=\u001b[39mredis_client, data\u001b[38;5;241m=\u001b[39maudio_data)\n",
-      "File \u001b[0;32m/app/audio/audio.py:42\u001b[0m, in \u001b[0;36mAudioSlicer.export_data\u001b[0;34m(self, start, end)\u001b[0m\n\u001b[1;32m     40\u001b[0m segment \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mslice(start, end)\n\u001b[1;32m     41\u001b[0m buffer \u001b[38;5;241m=\u001b[39m io\u001b[38;5;241m.\u001b[39mBytesIO()\n\u001b[0;32m---> 42\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mawait\u001b[39;00m asyncio\u001b[38;5;241m.\u001b[39mto_thread(export, segment, buffer)\n",
-      "File \u001b[0;32m/usr/lib/python3.9/asyncio/threads.py:25\u001b[0m, in \u001b[0;36mto_thread\u001b[0;34m(func, *args, **kwargs)\u001b[0m\n\u001b[1;32m     23\u001b[0m ctx \u001b[38;5;241m=\u001b[39m contextvars\u001b[38;5;241m.\u001b[39mcopy_context()\n\u001b[1;32m     24\u001b[0m func_call \u001b[38;5;241m=\u001b[39m functools\u001b[38;5;241m.\u001b[39mpartial(ctx\u001b[38;5;241m.\u001b[39mrun, func, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m---> 25\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mawait\u001b[39;00m loop\u001b[38;5;241m.\u001b[39mrun_in_executor(\u001b[38;5;28;01mNone\u001b[39;00m, func_call)\n",
-      "\u001b[0;31mCancelledError\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n"
      ]
     }
    ],
@@ -447,12 +282,13 @@
     "while True:\n",
     "    audio_data = await audio_slicer.export_data(start,end)\n",
     "    audio_name = str(uuid.uuid4())\n",
-    "    audio = Audio(chunk_name=audio_name, redis_client=redis_client, data=audio_data)\n",
+    "    audio = Audio(chunk_name=audio_name, redis_client=redis_inner_client, data=audio_data)\n",
     "    await audio.save()\n",
     "    diarization_result = await diarize(audio_data,client_id,audio_name,start)\n",
     "    await transcribe(diarization_result,connection_id,audio_name)\n",
     "    start_ = await get_next_chunk_start(diarization_result,length)\n",
     "    start = start_ if start_ else start+length\n",
+    "    if end>audio_slicer.audio.duration_seconds:break\n",
     "    end+=length"
    ]
   },
