switched vectorserch to qdrant

--- a/nbs/03_audio_processor_from_file.ipynb
+++ b/nbs/03_audio_processor_from_file.ipynb
@@ -24,7 +24,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_389/4230643358.py:12: DeprecationWarning: \n",
+      "/tmp/ipykernel_14493/4230643358.py:12: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -63,13 +63,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# import uuid\n",
     "# client_id = str(uuid.uuid4());client_id"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +217,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#audio_slicer.slice(117, 180)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,13 +266,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0 60\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "waiting diarize\n",
+      "done\n",
+      "waiting transcribe\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "53.573853989813244 120\n",
+      "waiting diarize\n",
+      "done\n",
+      "waiting transcribe\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "117.45331069609509 180\n",
+      "waiting diarize\n",
+      "done\n",
+      "waiting transcribe\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "179.0067911714771 240\n",
+      "waiting diarize\n",
+      "done\n",
+      "waiting transcribe\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "212.69949066213923 300\n",
+      "waiting diarize\n",
+      "done\n",
+      "waiting transcribe\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "291.2648556876061 360\n",
+      "waiting diarize\n",
+      "done\n",
+      "waiting transcribe\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "352.86926994906617 420\n",
+      "waiting diarize\n",
+      "done\n",
+      "waiting transcribe\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "412.7419354838709 480\n",
+      "waiting diarize\n",
+      "done\n",
+      "waiting transcribe\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "436.29881154499145 540\n",
+      "waiting diarize\n",
+      "done\n",
+      "waiting transcribe\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "528.2597623089982 600\n",
+      "waiting diarize\n",
+      "done\n",
+      "waiting transcribe\n",
+      "done\n",
+      "done\n",
+      "573.7860780984719 660\n",
+      "waiting diarize\n",
+      "done\n",
+      "waiting transcribe\n",
+      "done\n",
+      "done\n",
+      "612.334465195246 720\n",
+      "waiting diarize\n",
+      "done\n",
+      "waiting transcribe\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "693.3616298811544 780\n",
+      "waiting diarize\n",
+      "done\n",
+      "waiting transcribe\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "772.0797962648555 840\n",
+      "waiting diarize\n",
+      "done\n",
+      "waiting transcribe\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "835.246179966044 900\n",
+      "waiting diarize\n",
+      "done\n",
+      "waiting transcribe\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "896.3921901528012 960\n",
+      "waiting diarize\n",
+      "done\n",
+      "waiting transcribe\n",
       "done\n",
       "done\n",
       "done\n",
@@ -262,6 +421,35 @@
       "done\n",
       "done\n",
       "done\n",
+      "957.3853989813241 1020\n",
+      "waiting diarize\n",
+      "done\n",
+      "waiting transcribe\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "991.8590831918505 1080\n",
+      "waiting diarize\n",
+      "done\n",
+      "waiting transcribe\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "1075.9422750424446 1140\n",
+      "waiting diarize\n",
+      "done\n",
+      "waiting transcribe\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "done\n",
+      "1136.5619694397283 1200\n",
+      "waiting diarize\n",
+      "done\n",
+      "waiting transcribe\n",
       "done\n",
       "done\n",
       "done\n",
@@ -269,44 +457,48 @@
       "done\n",
       "done\n",
       "done\n",
+      "1195.6706281833615 1260\n",
+      "waiting diarize\n",
+      "done\n",
+      "waiting transcribe\n",
+      "done\n",
+      "done\n",
+      "1224.3548387096773 1320\n",
+      "waiting diarize\n",
+      "done\n",
+      "waiting transcribe\n",
       "done\n",
       "done\n",
       "done\n",
       "done\n",
       "done\n",
+      "done\n",
+      "1310.4584040747027 1380\n",
+      "waiting diarize\n",
+      "done\n",
+      "waiting transcribe\n",
       "done\n"
      ]
     }
    ],
    "source": [
-    "while True:\n",
-    "    audio_data = await audio_slicer.export_data(start,end)\n",
-    "    audio_name = str(uuid.uuid4())\n",
-    "    audio = Audio(chunk_name=audio_name, redis_client=redis_inner_client, data=audio_data)\n",
-    "    await audio.save()\n",
-    "    diarization_result = await diarize(audio_data,client_id,audio_name,start)\n",
-    "    await transcribe(diarization_result,connection_id,audio_name)\n",
-    "    start_ = await get_next_chunk_start(diarization_result,length)\n",
-    "    start = start_ if start_ else start+length\n",
-    "    if end>audio_slicer.audio.duration_seconds:break\n",
-    "    end+=length"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.46689303904923596 120\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(start,end)"
+    "try:\n",
+    "    while True:\n",
+    "        print(start,end)\n",
+    "        audio_data = await audio_slicer.export_data(start,end)\n",
+    "        audio_name = str(uuid.uuid4())\n",
+    "        audio = Audio(chunk_name=audio_name, redis_client=redis_inner_client, data=audio_data)\n",
+    "        await audio.save()\n",
+    "        print('waiting diarize')\n",
+    "        diarization_result = await diarize(audio_data,client_id,audio_name,start)\n",
+    "        print('waiting transcribe')\n",
+    "        await transcribe(diarization_result,connection_id,audio_name)\n",
+    "        start_ = await get_next_chunk_start(diarization_result,length)\n",
+    "        start = start_ if start_ else start+length\n",
+    "        #if end>audio_slicer.audio.duration_seconds:break\n",
+    "        end+=length\n",
+    "except KeyboardInterrupt:\n",
+    "    pass"
    ]
   },
   {
@@ -334,7 +526,7 @@
     }
    ],
    "source": [
-    "audio_slicer.slice(start,end)"
+    "audio_slicer.slice(117.45331069609509 180)"
    ]
   },
   {
