--- a/nbs/00_redis.ipynb
+++ b/nbs/00_redis.ipynb
@@ -45,7 +45,8 @@
     "from typing import Optional,Union,List, Literal\n",
     "from dataclasses import dataclass\n",
     "import redis\n",
-    "import json"
+    "import json\n",
+    "import pandas as pd\n"
    ]
   },
   {
@@ -133,7 +134,7 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
+    "#| export\n",
     "\n",
     "async def get_connection_queues(name, redis_client, min_length=1, pattern='*'):\n",
     "    \"\"\"\n",
@@ -277,18 +278,13 @@
     "    \"\"\"\n",
     "    connection to initial chrome extention feed\n",
     "    \"\"\"\n",
-    "    def __init__(self, conn_id, redis_client,is_video=False):\n",
+    "    def __init__(self, conn_id, redis_client):\n",
     "        self.id = conn_id\n",
     "        self.redis_client = redis_client\n",
-    "        self.is_video = is_video\n",
     "        self.name = f\"Connection:{self.id}\"\n",
     "        self.start_timestamp = pd.Timestamp.utcnow()\n",
     "        self.queue = f\"initialFeed_audio:{self.id}\"\n",
-    "        self.__post_init__()\n",
     "\n",
-    "    def __post_init__(self):\n",
-    "        if self.is_video:self.queue = f\"initialFeed:{self.id}\"\n",
-    "        else:            self.queue = f\"initialFeed_audio:{self.id}\"\n",
     "\n",
     "    async def set_open(self):\n",
     "            self.open = True\n",
@@ -328,6 +324,8 @@
     "            items = await self.redis_client.eval(lua_script, 1, self.queue, max_len)\n",
     "            items = [i for i in items if i]\n",
     "            return [StreamItem.load(i) for i in items]\n",
+    "        else:\n",
+    "            print('items not available')\n",
     "        \n",
     "    async def get_queue_length(self):\n",
     "        return await self.redis_client.llen(self.queue)\n",
